# RF-DNS

./: COMPILE_OPTIMIZATION.md  Cargo.toml  Dockerfile  README.md  benchmark.sh  build-fast.sh  cert.pem  codespaces-fmANDck.sh  key.pem  named.root  rust-toolchain.toml  test_doh.py
.cargo/: config.toml
.github/workflows/: build.yml  rust.yml
src/: app.rs  cache.rs  cache_old.rs  cache_optimized.rs  cloudflare.rs  common.rs  config.rs  dns_server.rs  dns_utils.rs  doh.rs  doq.rs  dot.rs  errors.rs  main.rs  metrics.rs  metrics_old.rs  recursive_dns.rs  resolver.rs  resolver_old.rs  resolver_optimized.rs  servers.rs  servers_old.rs  servers_optimized.rs  state.rs  utils.rs
