[package]
name = "rfdns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
tower = { version = "0.4", default-features = false, features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hickory-proto = "0.24"
hickory-client = "0.24"
hickory-resolver = "0.24"
base64 = "0.21"
ipnet = "2.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19"
tokio-rustls = "0.25"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }

[profile.release]
lto = "full"
codegen-units = 256
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = true

[profile.dev]
# 개발 모드에서 컴파일 속도 향상
debug = 1  # 디버그 정보 축소
opt-level = 0  # 최적화 비활성화
incremental = true  # 증분 컴파일 활성화
codegen-units = 256  # 병렬 컴파일 단위 증가

[profile.dev.package."*"]
# 의존성 최적화로 컴파일 속도 향상
opt-level = 3
debug = false

# 빠른 컴파일을 위한 개발 프로파일
[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = false
incremental = true
codegen-units = 256
