[package]
name = "rfdns"
version = "7.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = [
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "signal",
] }
tokio-util = "0.7"
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "http1",
    "json",
    "query",
] }
tower = { version = "0.5", default-features = false, features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
hickory-proto = "0.25"
hickory-client = "0.25"
hickory-resolver = "0.25"
base64 = "0.22"
ipnet = "2.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
] }
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.21"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
rcgen = "0.14"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
futures = "0.3.31"
socket2 = "0.5"
quinn = "0.11"
rustls-native-certs = "0.8"
daemonize = "0.5"

[profile.release]
lto = "fat"
codegen-units = 256
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = true
